# lite_monitor

./: .gitignore  CMakeLists.txt
configs/: lite_monitor.yaml  sender.yaml
include/common/: message.h  message_c1.h  message_d1.h
include/model/: history.h
include/proto/: report_message.pb.cc  report_message.pb.h  request_items.pb.cc  request_items.pb.h  response_items.pb.cc  response_items.pb.h  response_message.pb.cc  response_message.pb.h
include/proto/messages/: proto_gen.sh  report_message.proto  request_items.proto  response_items.proto  response_message.proto
include/sender/: sender.h
scripts/db/: init.sql  partition.sql
src/: lite_monitor.cpp  main.cpp
src/common/: configs_loader.cpp  configs_loader.h  logger.h  logger.hpp  parameters.h
src/common/config/: configs_loader.cpp  configs_loader.h  parameters.h
src/common/protocol/: message.h  message_c0.h
src/common/utils/: byteorder_utils.h  checksum_utils.h  path_utils.cpp  path_utils.h  ring_buffer.h
src/core/db/: CMakeLists.txt  db_operator.h
src/core/housekeeper/: CMakeLists.txt  history_ring_buffer.h  history_syncer.h  trends_syncer.h
src/core/http/: CMakeLists.txt  http_result.hpp  http_server.cpp  http_server.h
src/core/model/: history.cpp  history.h  host.cpp  host.h  item.cpp  item.h
src/core/server/: delimeters_frame_handler.cpp  delimeters_frame_handler.h  frame_handler.h  handler.h  pipline.h  tcp_server.hpp
src/core/trapper/: CMakeLists.txt  handler_context.h  tcp_server.cpp
src/db/: db_config.h  db_init.h  db_operator.cpp  db_operator.h  db_result.hpp
src/sender/: CMakeLists.txt  sender.cpp
thirdpart/include/mysql/: my_config.h  mysql_version.h
thirdpart/lib/mysql/: libmysqlclient.so.20
thirdpart/lib/mysql/pkgconfig/: mysqlclient.pc
thirdpart/lib/yaml-cpp/pkgconfig/: yaml-cpp.pc
